# clashy.py

./: MANIFEST.in  README.rst  pyproject.toml
.github/workflows/: assets-update.yml  push-to-pypi.yml  tests.yml
coc/: __init__.py  _version.py  abc.py  battlelogs.py  buildings.py  characters.py  clans.py  client.py  constants.py  enums.py  errors.py  events.py  events.pyi  game_data.py  hero.py  http.py  miscmodels.py  players.py  spell.py  troop.py  utils.py  wars.py
coc/ext/triggers/: triggers.py
coc/static/: generate_constants.py  static_data.json  update_static.py
docs/: conf.py  index.rst
docs/advanced/: event.rst  game_data.rst
docs/client/: logging_in.rst
docs/extensions/: triggers.rst
docs/miscellaneous/: changelog.rst
docs/models/: enums.rst
examples/: war_logs.py
tests/: mock_api.py  test_buildings.py  test_capitalraidseasons.py  test_clans.py  test_clash_meta.py  test_client.py  test_enums.py  test_miscmodels.py  test_players.py  test_troop_levels.py  test_wars.py
