[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "clashy.py"
authors = [{ name = "ClashKing" }]
maintainers = [{ name = "MagicTheDev" }]
version = "25.12.0"
description = "A python wrapper for the Clash of Clans API"
requires-python = ">=3.10.0"
readme = "README.rst"
license = { text = "MIT" }
keywords = ["coc", "clash of clans", "clashy.py", "clash api"]
classifiers = ["Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Operating System :: OS Independent",]
dependencies = ["aiohttp", "orjson"]
[project.urls]
documentation = "https://clashy.clashk.ing/en/latest/"
repository = "https://github.com/ClashKingInc/clashy.py"
changelog = "https://clashy.clashk.ing/en/latest/miscellaneous/changelog.html"

[project.optional-dependencies]
docs = ["sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib_trio",
    "autodocsumm",
]

[tool.setuptools]
packages = ["coc", "coc.ext.discordlinks", "coc.static", "coc.ext.triggers"]
include-package-data = true

[tool.setuptools.package-data]
coc = ["events.pyi"]
